WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57758
[Cairo] Memory leak in RefPtrCairo
https://bugs.webkit.org/show_bug.cgi?id=57758
Summary
[Cairo] Memory leak in RefPtrCairo
Martin Robinson
Reported
2011-04-04 08:55:46 PDT
template<> void derefIfNotNull(cairo_font_face_t* ptr) 62 { 63 if (LIKELY(ptr != 0)) 64 cairo_font_face_reference(ptr); 65 } Line 64 should certainly read cairo_font_face_destroy.
Attachments
Patch
(1.37 KB, patch)
2011-04-04 09:12 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2011-04-04 09:12:26 PDT
Created
attachment 88067
[details]
Patch
Xan Lopez
Comment 2
2011-04-04 16:06:10 PDT
Comment on
attachment 88067
[details]
Patch wow, oops?
Martin Robinson
Comment 3
2011-04-04 16:19:20 PDT
Comment on
attachment 88067
[details]
Patch Clearing flags on attachment: 88067 Committed
r82890
: <
http://trac.webkit.org/changeset/82890
>
Martin Robinson
Comment 4
2011-04-04 16:19:24 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug