2011-04-04  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Xan Lopez.

        [Cairo] Memory leak in RefPtrCairo
        https://bugs.webkit.org/show_bug.cgi?id=57758

        No new tests. This just fixes a memory leak.

        * platform/graphics/cairo/RefPtrCairo.cpp:
        (WTF::derefIfNotNull): Deref should unref the cairo_font_fact_t, not reference it.

Canonical link: https://commits.webkit.org/72674@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82890 268f45cc-cd09-0410-ab3c-d52691b4dbfc